Make sure whitespace is preserved

--- a/public/stylesheets/scss/style.scss
+++ b/public/stylesheets/scss/style.scss
@@ -117,6 +117,19 @@ kbd,
 samp {
   font-family: monospace, sans-serif;
   white-space: pre;
+  background-color: rgba(0,0,0,0.04);
+  border-radius: 3px;
+  padding-top: 0.2em;
+  padding-bottom: 0.2em;
+}
+
+code:before{
+  letter-spacing: -0.2em;
+  content: "\00a0";
+}
+code:after{
+  letter-spacing: -0.2em;
+  content: "\00a0";
 }
 
 html {
